bento/server/instances/884c2e53-5826-47c3-8edd-51c32219516d.err
Traceback (most recent call last):
  File "/mnt/c/Users/kutta/OneDrive/Desktop/diss/bento/bento/server/driver.py", line 52, in <module>
    _main()
  File "/mnt/c/Users/kutta/OneDrive/Desktop/diss/bento/bento/server/driver.py", line 46, in _main
    retval= _execute(code, call)
  File "/mnt/c/Users/kutta/OneDrive/Desktop/diss/bento/bento/server/driver.py", line 26, in _execute
    byte_code= compile(code, '<inline>', 'exec')
  File "<inline>", line 8
    def upload(url):
                    ^
IndentationError: expected an indented block after function definition on line 8
